error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
[ 75%] Building CXX object CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o
/home/haris/celestial-nav/src/location_determination.cpp: In static member function ‘static double LocationDetermination::calculateAngularError(const std::vector<std::pair<Star, ReferenceStarData> >&, double, double, double)’:
/home/haris/celestial-nav/src/location_determination.cpp:89:75: error: cannot convert ‘const cv::Point2f’ {aka ‘const cv::Point_<float>’} to ‘const Eigen::Vector2d&’ {aka ‘const Eigen::Matrix<double, 2, 1>&’}
   89 |             double observedAngle = calculateAngleBetweenStars(star1.first.position, star2.first.position);
      |                                                               ~~~~~~~~~~~~^~~~~~~~
      |                                                                           |
      |                                                                           const cv::Point2f {aka const cv::Point_<float>}
In file included from /home/haris/celestial-nav/src/location_determination.cpp:9:
/home/haris/celestial-nav/src/location_determination.h:21:69: note:   initializing argument 1 of ‘static double LocationDetermination::calculateAngleBetweenStars(const Eigen::Vector2d&, const Eigen::Vector2d&)’
   21 |     static double calculateAngleBetweenStars(const Eigen::Vector2d& star1, const Eigen::Vector2d& star2);
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:146: CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 